[gd_scene load_steps=7 format=3 uid="uid://dnrx1ujhc2ue6"]

[ext_resource type="Script" path="res://scenes/ui/main_menu.gd" id="1_vwdua"]
[ext_resource type="Texture2D" uid="uid://cyf0rquwfsdsg" path="res://my_resources/brave2.png" id="2_pil8n"]
[ext_resource type="PackedScene" uid="uid://dmu80fq6rvrp" path="res://scenes/ui/sound_button.tscn" id="3_japjq"]
[ext_resource type="PackedScene" uid="uid://dmyeg6ldx2orv" path="res://scenes/ui/vignette.tscn" id="4_ys28f"]
[ext_resource type="Texture2D" uid="uid://g1dixcbkarls" path="res://my_resources/00.png" id="5_dfm6p"]
[ext_resource type="Texture2D" uid="uid://b6le8esmmky15" path="res://my_resources/01.png" id="6_6oaq2"]

[node name="Level Selector" type="CanvasLayer"]
script = ExtResource("1_vwdua")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(320, 180)
scale = Vector2(0.35, 0.35)
texture = ExtResource("2_pil8n")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2

[node name="ParentContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = 209.0
offset_top = 10.0
offset_right = 387.0
offset_bottom = 311.0
scale = Vector2(1.23445, 1.13885)
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="PlainsContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = 244.0
offset_top = 21.0
offset_right = 400.0
offset_bottom = 109.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="PlainsContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="PlainsContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="PlainsContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "The Plains
"
horizontal_alignment = 1

[node name="PlayButtonPlains" parent="PlainsContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_japjq")]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="ArenaContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = 244.0
offset_top = 113.0
offset_right = 400.0
offset_bottom = 201.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="ArenaContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="ArenaContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="ArenaContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "The Arena
"
horizontal_alignment = 1

[node name="PlayButtonArena" parent="ArenaContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_japjq")]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="DungeonContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(100, 0)
offset_left = 244.0
offset_top = 205.0
offset_right = 400.0
offset_bottom = 293.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="MarginContainer" type="MarginContainer" parent="DungeonContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 0
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="DungeonContainer/MarginContainer"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="DungeonContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"BlueOutlineLabel"
theme_override_font_sizes/font_size = 32
text = "The Ruins"
horizontal_alignment = 1

[node name="PlayButtonDungeon" parent="DungeonContainer/MarginContainer/VBoxContainer" instance=ExtResource("3_japjq")]
unique_name_in_owner = true
layout_mode = 2
text = "Play"

[node name="BackButton" parent="." instance=ExtResource("3_japjq")]
unique_name_in_owner = true
custom_minimum_size = Vector2(50, 0)
offset_left = 244.0
offset_top = 323.0
offset_right = 400.0
offset_bottom = 344.0
size_flags_horizontal = 0
text = "Back"

[node name="UpgradesButton" parent="." instance=ExtResource("3_japjq")]
unique_name_in_owner = true
offset_left = 244.0
offset_top = 297.0
offset_right = 400.0
offset_bottom = 318.0
text = "Upgrades"

[node name="Vignette" parent="." instance=ExtResource("4_ys28f")]
layer = 2

[node name="QuitButton" parent="." instance=ExtResource("3_japjq")]
unique_name_in_owner = true
visible = false
offset_right = 26.0
offset_bottom = 21.0
text = "Quit"

[node name="OptionsButton" parent="." instance=ExtResource("3_japjq")]
unique_name_in_owner = true
visible = false
text = "Options"

[node name="Stars" type="Node2D" parent="."]

[node name="00" type="Sprite2D" parent="Stars"]
position = Vector2(345, 98.25)
scale = Vector2(0.630435, 0.630435)
texture = ExtResource("5_dfm6p")

[node name="01" type="Sprite2D" parent="Stars"]
position = Vector2(321, 98.25)
scale = Vector2(0.630435, 0.630435)
texture = ExtResource("5_dfm6p")

[node name="02" type="Sprite2D" parent="Stars"]
position = Vector2(296, 98.25)
scale = Vector2(0.636364, 0.636364)
texture = ExtResource("6_6oaq2")

[node name="Stars2" type="Node2D" parent="."]
position = Vector2(0, 92)

[node name="00" type="Sprite2D" parent="Stars2"]
position = Vector2(345, 98.25)
scale = Vector2(0.630435, 0.630435)
texture = ExtResource("5_dfm6p")

[node name="01" type="Sprite2D" parent="Stars2"]
position = Vector2(321, 98.25)
scale = Vector2(0.630435, 0.630435)
texture = ExtResource("6_6oaq2")

[node name="02" type="Sprite2D" parent="Stars2"]
position = Vector2(296, 98.25)
scale = Vector2(0.636364, 0.636364)
texture = ExtResource("6_6oaq2")

[node name="Stars3" type="Node2D" parent="."]
position = Vector2(0, 184)

[node name="00" type="Sprite2D" parent="Stars3"]
position = Vector2(345, 98.25)
scale = Vector2(0.630435, 0.630435)
texture = ExtResource("6_6oaq2")

[node name="01" type="Sprite2D" parent="Stars3"]
position = Vector2(321, 98.25)
scale = Vector2(0.630435, 0.630435)
texture = ExtResource("6_6oaq2")

[node name="02" type="Sprite2D" parent="Stars3"]
position = Vector2(296, 98.25)
scale = Vector2(0.636364, 0.636364)
texture = ExtResource("6_6oaq2")
